# gitbook-downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LAUNCH_KIT.md  LICENSE  README.md  build_exe.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  ci.yml
assets/: social-preview.html
src/: launcher.py
src/gitbook_downloader/: __init__.py  __main__.py  cli.py  dashboard.py  engine.py  splitter.py
src/gitbook_downloader/mcp/: __init__.py  server.py
src/gitbook_downloader/providers/: __init__.py  base.py  docusaurus.py  generic.py  gitbook.py  mintlify.py  readthedocs.py
src/gitbook_downloader/search/: __init__.py  index.py
src/gitbook_downloader/storage/: __init__.py  manager.py  versioning.py
src/gitbook_downloader/utils/: __init__.py  config.py  discovery.py  export.py  retry.py
tests/: test_imports.py  test_providers.py  test_search.py  test_splitter.py  test_storage.py  test_utils.py
