[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gitbook-downloader"
version = "6.0.0"
description = "Download entire documentation sites — GitBook, Docusaurus, ReadTheDocs, Mintlify, or any site — and split into AI-friendly chunks."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Rohan Shetty", email = "shettyrohan2@gmail.com"},
]
keywords = ["gitbook", "documentation", "markdown", "downloader", "ai", "llm", "chunks", "splitter", "docusaurus", "readthedocs", "mintlify", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "markdownify>=0.11.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
gui = ["customtkinter>=5.2.0"]
mcp = ["mcp>=1.2.0"]
search = []  # SQLite FTS5 is stdlib, this is a placeholder
all = ["customtkinter>=5.2.0", "mcp>=1.2.0"]

[project.scripts]
gitbook-downloader = "gitbook_downloader.cli:main"
gitbook-dl = "gitbook_downloader.cli:main"

[project.urls]
Homepage = "https://github.com/RohannShetty/gitbook-downloader"
Repository = "https://github.com/RohannShetty/gitbook-downloader"
Issues = "https://github.com/RohannShetty/gitbook-downloader/issues"
Changelog = "https://github.com/RohannShetty/gitbook-downloader/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gitbook_downloader = ["py.typed"]
